test/org/midica/testfiles/failing/block-elsif-without-if.midica
INCLUDE inc/instruments.midica

VAR $x = 1

{ if=$x
	0  c  /4
}
0  c  /4
{ elsif=$x
	0  c  /4
}